build.log

> jpcloud@0.0.0 build
> docusaurus build

[INFO] [en] Creating an optimized production build...
ℹ Compiling Client
ℹ Compiling Server
✔ Client: Compiled with some errors in 24.18s


SyntaxError: /opt/website/docs/JP_Cloud_Wiki/Linux/Gnome.md: Expected corresponding JSX closing tag for <username>. (29:21)
  27 | `}</code></pre>
  28 | <p>{`Hello `}<username>{`. How Are you today.
> 29 | I am 100 years old.`}</p>
     |                      ^
  30 |     </MDXLayout>
  31 |   )
  32 | };
[ERROR] Client bundle compiled with errors therefore further build is impossible.
